--- a/Pop Music/Description
+++ b/Pop Music/Description
@@ -1,2 +1,4 @@
-Pop music is a genre characterized by catchy melodies and mass appeal. It incorporates various styles and subgenres, evolving over time to adapt to changing tastes and trends. Historically, it was thought of as any non-folk 
-form that acquired mass popularity.
+Desi pop is a genre of music that blends traditional Indian musical elements with modern pop music. 
+It often features upbeat rhythms, catchy melodies, and lyrics that touch on themes like love, relationships, 
+and everyday life1. This genre is a vibrant part of the Indian music scene and is closely linked to Bollywood 
+and other regional film industries.
